--- a/notebooks/dataUnderstanding.ipynb
+++ b/notebooks/dataUnderstanding.ipynb
@@ -1,21 +1,180 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np "
+    "import numpy as np \n",
+    "\n",
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql import functions as F\n",
+    "from pyspark.sql.types import *\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "#Spark version and Spark NLP version should be align"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Understanding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark = SparkSession.builder\\\n",
+    "    .appName(\"nlp\")\\\n",
+    "    .master(\"local[*]\")\\\n",
+    "    .config(\"spark.driver.memory\",\"8G\")\\\n",
+    "    .config(\"spark.driver.maxResultSize\", \"0\") \\\n",
+    "    .config(\"spark.kryoserializer.buffer.max\", \"2000M\")\\\n",
+    "    .getOrCreate()\n",
+    "\n",
+    "spark.sparkContext.setLogLevel(\"WARN\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_path = os.environ.get(\"NEWS_DATA_PATH\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ",Unnamed: 0,date,year,month,day,author,title,article,url,section,publication\n",
+      "0,0,2016-12-09 18:31:00,2016,12.0,9,Lee Drutman,We should take concerns about the health of liberal democracy seriously,\"This post is part of Polyarchy, an independent blog produced by the political reform program at New Am"
+     ]
+    }
+   ],
+   "source": [
+    "!head -c 300 $data_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "comes to fitness. On another note ... it sounds like she's still working when it comes to SCOTUS biz too. Law360 notes she calls into conference chats via phone with the other robes these days.\",https://www.tmz.com/2020/04/01/ruth-bader-ginsburg-rbg-justice-working-out-gym-trainer-coronavirus/,,TMZ\n"
+     ]
+    }
+   ],
+   "source": [
+    "!tail -c 300 $data_path"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The columns have to be change for a more readable names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = spark.read.option(\"header\",\"true\").csv(data_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.withColumnRenamed(\"_c0\",\"idx\")\n",
+    "df = df.withColumnRenamed(\"Unnamed: 0\",\"idx_news\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- idx: string (nullable = true)\n",
+      " |-- idx_news: string (nullable = true)\n",
+      " |-- date: string (nullable = true)\n",
+      " |-- year: string (nullable = true)\n",
+      " |-- month: string (nullable = true)\n",
+      " |-- day: string (nullable = true)\n",
+      " |-- author: string (nullable = true)\n",
+      " |-- title: string (nullable = true)\n",
+      " |-- article: string (nullable = true)\n",
+      " |-- url: string (nullable = true)\n",
+      " |-- section: string (nullable = true)\n",
+      " |-- publication: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.printSchema()"
    ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.10.4 ('nlp-pyspark-hf')",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.4"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "9e718fae2162769484202c44e3e87d8c6b610ef033b2b837427352bed1d4e9a1"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
