<code> Spark initial data understanding

--- a/notebooks/dataUnderstanding.ipynb
+++ b/notebooks/dataUnderstanding.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,12 +47,12 @@
     "    .config(\"spark.kryoserializer.buffer.max\", \"2000M\")\\\n",
     "    .getOrCreate()\n",
     "\n",
-    "spark.sparkContext.setLogLevel(\"WARN\")"
+    "spark.sparkContext.setLogLevel(\"ERROR\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -103,26 +103,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = spark.read.option(\"header\",\"true\").csv(data_path)"
+    "df = spark.read.option(\"header\",\"true\").csv(data_path).withColumnRenamed(\"_c0\",\"idx\").withColumnRenamed(\"Unnamed: 0\",\"idx_news\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.withColumnRenamed(\"_c0\",\"idx\")\n",
-    "df = df.withColumnRenamed(\"Unnamed: 0\",\"idx_news\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -149,6 +139,155 @@
    "source": [
     "df.printSchema()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-RECORD 0-------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      " idx         | 0                                                                                                                                                      \n",
+      " idx_news    | 0                                                                                                                                                      \n",
+      " date        | 2016-12-09 18:31:00                                                                                                                                    \n",
+      " year        | 2016                                                                                                                                                   \n",
+      " month       | 12.0                                                                                                                                                   \n",
+      " day         | 9                                                                                                                                                      \n",
+      " author      | Lee Drutman                                                                                                                                            \n",
+      " title       | We should take concerns about the health of liberal democracy seriously                                                                                \n",
+      " article     | \"This post is part of Polyarchy, an independent blog produced by the political reform program at New America, a Washington think tank devoted to de... \n",
+      " url         |  however                                                                                                                                               \n",
+      " section     |  several critics have jumped on Foa and Mounk for misinterpreting the data and generating unnecessary panic. Political scientist Erik Voeten           \n",
+      " publication |  for example                                                                                                                                           \n",
+      "-RECORD 1-------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      " idx         | 1                                                                                                                                                      \n",
+      " idx_news    | 1                                                                                                                                                      \n",
+      " date        | 2016-10-07 21:26:46                                                                                                                                    \n",
+      " year        | 2016                                                                                                                                                   \n",
+      " month       | 10.0                                                                                                                                                   \n",
+      " day         | 7                                                                                                                                                      \n",
+      " author      | Scott Davis                                                                                                                                            \n",
+      " title       | Colts GM Ryan Grigson says Andrew Luck's contract makes it difficult to build the team                                                                 \n",
+      " article     |  The Indianapolis Colts made Andrew Luck the highest-paid player in NFL history this offseason with a five-year, $122-million contract with $89 mil... \n",
+      " url         | null                                                                                                                                                   \n",
+      " section     | null                                                                                                                                                   \n",
+      " publication | null                                                                                                                                                   \n",
+      "-RECORD 2-------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      " idx         | The highest-paid player on all 32 NFL teams\"                                                                                                           \n",
+      " idx_news    | https://www.businessinsider.com/colts-gm-ryan-grigson-andrew-luck-contract-2016-10                                                                     \n",
+      " date        | null                                                                                                                                                   \n",
+      " year        | Business Insider                                                                                                                                       \n",
+      " month       | null                                                                                                                                                   \n",
+      " day         | null                                                                                                                                                   \n",
+      " author      | null                                                                                                                                                   \n",
+      " title       | null                                                                                                                                                   \n",
+      " article     | null                                                                                                                                                   \n",
+      " url         | null                                                                                                                                                   \n",
+      " section     | null                                                                                                                                                   \n",
+      " publication | null                                                                                                                                                   \n",
+      "only showing top 3 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.show(3,vertical=True,truncate=150)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3858240"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyspark.sql.functions as F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+-----+\n",
+      "|                year|count|\n",
+      "+--------------------+-----+\n",
+      "| \"\"Atlas Obscura\"...|    1|\n",
+      "| like most Androi...|    1|\n",
+      "| too. In \"\"Call o...|    1|\n",
+      "| Brinkley remains...|    1|\n",
+      "| Will's survival ...|    1|\n",
+      "| but still a heal...|    1|\n",
+      "| meant I was not ...|    1|\n",
+      "|               beans|    6|\n",
+      "| the doors are armed|    1|\n",
+      "| the young spoile...|    2|\n",
+      "| lots of people s...|    1|\n",
+      "| 74% are in favor...|    1|\n",
+      "| but extends into...|    1|\n",
+      "| follow him on In...|    1|\n",
+      "| your skin will p...|    1|\n",
+      "| a counselor and ...|    1|\n",
+      "|    once and for all|    1|\n",
+      "| this cool applia...|    2|\n",
+      "|                $39 |    1|\n",
+      "| \"\" Zuckerberg says.|    1|\n",
+      "+--------------------+-----+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.groupBy(\"year\").count().show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
