<code> datasets usage - still with the problem of file not parse well

--- a/notebooks/dataUnderstanding.ipynb
+++ b/notebooks/dataUnderstanding.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -103,16 +103,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8865740 /home/rjac/workspace/all-the-news-2-1/all-the-news-2-1.csv\n"
+     ]
+    }
+   ],
    "source": [
-    "df = spark.read.option(\"header\",\"true\").csv(data_path).withColumnRenamed(\"_c0\",\"idx\").withColumnRenamed(\"Unnamed: 0\",\"idx_news\")"
+    "!wc -l $data_path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Line 8865740\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(data_path,'rb') as fp:\n",
+    "    count=0\n",
+    "    for line in fp:\n",
+    "        count += 1\n",
+    "    print(\"Line {}\".format(count))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = spark.read.option(\"header\",\"true\").option(\"multiline\",\"true\").csv(data_path).withColumnRenamed(\"_c0\",\"idx\").withColumnRenamed(\"Unnamed: 0\",\"idx_news\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -172,22 +210,22 @@
       " author      | Scott Davis                                                                                                                                            \n",
       " title       | Colts GM Ryan Grigson says Andrew Luck's contract makes it difficult to build the team                                                                 \n",
       " article     |  The Indianapolis Colts made Andrew Luck the highest-paid player in NFL history this offseason with a five-year, $122-million contract with $89 mil... \n",
-      " url         | null                                                                                                                                                   \n",
+      " url         | https://www.businessinsider.com/colts-gm-ryan-grigson-andrew-luck-contract-2016-10                                                                     \n",
       " section     | null                                                                                                                                                   \n",
-      " publication | null                                                                                                                                                   \n",
+      " publication | Business Insider                                                                                                                                       \n",
       "-RECORD 2-------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      " idx         | The highest-paid player on all 32 NFL teams\"                                                                                                           \n",
-      " idx_news    | https://www.businessinsider.com/colts-gm-ryan-grigson-andrew-luck-contract-2016-10                                                                     \n",
-      " date        | null                                                                                                                                                   \n",
-      " year        | Business Insider                                                                                                                                       \n",
-      " month       | null                                                                                                                                                   \n",
-      " day         | null                                                                                                                                                   \n",
+      " idx         | 2                                                                                                                                                      \n",
+      " idx_news    | 2                                                                                                                                                      \n",
+      " date        | 2018-01-26 00:00:00                                                                                                                                    \n",
+      " year        | 2018                                                                                                                                                   \n",
+      " month       | 1.0                                                                                                                                                    \n",
+      " day         | 26                                                                                                                                                     \n",
       " author      | null                                                                                                                                                   \n",
-      " title       | null                                                                                                                                                   \n",
-      " article     | null                                                                                                                                                   \n",
-      " url         | null                                                                                                                                                   \n",
-      " section     | null                                                                                                                                                   \n",
-      " publication | null                                                                                                                                                   \n",
+      " title       | Trump denies report he ordered Mueller fired                                                                                                           \n",
+      " article     | DAVOS, Switzerland (Reuters) - U.S. President Donald Trump denied a report on Friday that he had ordered Special Counsel Robert Mueller fired last ... \n",
+      " url         | https://www.reuters.com/article/us-davos-meeting-trump-mueller/trump-denies-report-he-ordered-mueller-fired-idUSKBN1FF12A                              \n",
+      " section     | Davos                                                                                                                                                  \n",
+      " publication | Reuters                                                                                                                                                \n",
       "only showing top 3 rows\n",
       "\n"
      ]
@@ -199,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -212,10 +250,10 @@
     {
      "data": {
       "text/plain": [
-       "3858240"
+       "3517272"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,14 +273,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                \r"
+      "[Stage 4:>                                                          (0 + 1) / 1]\r"
      ]
     },
     {
@@ -257,9 +295,8 @@
       "| too. In \"\"Call o...|    1|\n",
       "| Brinkley remains...|    1|\n",
       "| Will's survival ...|    1|\n",
-      "| but still a heal...|    1|\n",
       "| meant I was not ...|    1|\n",
-      "|               beans|    6|\n",
+      "|               beans|    4|\n",
       "| the doors are armed|    1|\n",
       "| the young spoile...|    2|\n",
       "| lots of people s...|    1|\n",
@@ -270,16 +307,54 @@
       "| a counselor and ...|    1|\n",
       "|    once and for all|    1|\n",
       "| this cool applia...|    2|\n",
-      "|                $39 |    1|\n",
       "| \"\" Zuckerberg says.|    1|\n",
+      "|   \"\" Hopkins said. |    1|\n",
+      "| RDN. These food ...|    1|\n",
+      "| Musk published a...|    1|\n",
+      "| which can fit mo...|    1|\n",
+      "|         you'll know|    1|\n",
+      "|096 in 2016 and to 1|    1|\n",
+      "| improvements tha...|    1|\n",
+      "| his knowledge of...|    1|\n",
+      "| unleashing a wav...|    1|\n",
+      "| but his loyalty ...|    1|\n",
+      "|    four years later|    1|\n",
+      "|' and the seminal...|    1|\n",
+      "| don't stop looki...|    1|\n",
+      "| and the debate o...|    1|\n",
+      "|   racial inequality|    1|\n",
+      "| I stopped by to ...|    1|\n",
+      "| torching the Jag...|    1|\n",
+      "| according to Eur...|    1|\n",
+      "|          professors|    1|\n",
+      "|000 from the comp...|    1|\n",
+      "|758 visitors with...|    1|\n",
+      "|\"\" as well as Ed ...|    1|\n",
+      "| the same way tha...|    1|\n",
+      "| opinions are bou...|    1|\n",
+      "| is again a very ...|    1|\n",
+      "|https://www.refin...|    1|\n",
+      "| it will look lik...|    1|\n",
+      "|             genders|    2|\n",
+      "| focusing especia...|    1|\n",
+      "| its second-large...|    1|\n",
+      "| and Candy Crush ...|    1|\n",
+      "| which combined a...|    1|\n",
       "+--------------------+-----+\n",
-      "only showing top 20 rows\n",
+      "only showing top 50 rows\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
      ]
     }
    ],
    "source": [
-    "df.groupBy(\"year\").count().show()"
+    "df.groupBy(\"year\").count().show(50)"
    ]
   },
   {
