<code> Format and modification to viz

--- a/notebooks/dataUnderstanding.ipynb
+++ b/notebooks/dataUnderstanding.ipynb
@@ -234,7 +234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Nuber of articles per date"
+    "##### Articles per date"
    ]
   },
   {
