<code> Format and modification to viz

--- a/notebooks/dataUnderstanding.ipynb
+++ b/notebooks/dataUnderstanding.ipynb
@@ -545,7 +545,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### News longer sequence"
+    "### Tokens (Words) per Article"
    ]
   },
   {
