--- a/notebooks/NER-baseline.ipynb
+++ b/notebooks/NER-baseline.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "3448b8d3",
+   "id": "709c781c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "67f6bd76",
+   "id": "454b9231",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,8 +24,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "13919a34",
+   "execution_count": 135,
+   "id": "babfd302",
    "metadata": {},
    "outputs": [
     {
@@ -54,12 +54,30 @@
        "      <th>2</th>\n",
        "      <th>3</th>\n",
        "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "      <th>11</th>\n",
+       "      <th>12</th>\n",
+       "      <th>13</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Sentence #</th>\n",
        "      <td>Sentence: 1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -72,6 +90,15 @@
        "      <td>demonstrators</td>\n",
        "      <td>have</td>\n",
        "      <td>marched</td>\n",
+       "      <td>through</td>\n",
+       "      <td>London</td>\n",
+       "      <td>to</td>\n",
+       "      <td>protest</td>\n",
+       "      <td>the</td>\n",
+       "      <td>war</td>\n",
+       "      <td>in</td>\n",
+       "      <td>Iraq</td>\n",
+       "      <td>and</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>POS</th>\n",
@@ -80,6 +107,15 @@
        "      <td>NNS</td>\n",
        "      <td>VBP</td>\n",
        "      <td>VBN</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>NNP</td>\n",
+       "      <td>TO</td>\n",
+       "      <td>VB</td>\n",
+       "      <td>DT</td>\n",
+       "      <td>NN</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>NNP</td>\n",
+       "      <td>CC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Tag</th>\n",
@@ -88,32 +124,47 @@
        "      <td>O</td>\n",
        "      <td>O</td>\n",
        "      <td>O</td>\n",
+       "      <td>O</td>\n",
+       "      <td>B-geo</td>\n",
+       "      <td>O</td>\n",
+       "      <td>O</td>\n",
+       "      <td>O</td>\n",
+       "      <td>O</td>\n",
+       "      <td>O</td>\n",
+       "      <td>B-geo</td>\n",
+       "      <td>O</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                      0    1              2     3        4\n",
-       "Sentence #  Sentence: 1  NaN            NaN   NaN      NaN\n",
-       "Word          Thousands   of  demonstrators  have  marched\n",
-       "POS                 NNS   IN            NNS   VBP      VBN\n",
-       "Tag                   O    O              O     O        O"
+       "                     0    1              2     3        4        5       6   \\\n",
+       "Sentence #  Sentence: 1  NaN            NaN   NaN      NaN      NaN     NaN   \n",
+       "Word          Thousands   of  demonstrators  have  marched  through  London   \n",
+       "POS                 NNS   IN            NNS   VBP      VBN       IN     NNP   \n",
+       "Tag                   O    O              O     O        O        O   B-geo   \n",
+       "\n",
+       "             7        8    9    10   11     12   13  \n",
+       "Sentence #  NaN      NaN  NaN  NaN  NaN    NaN  NaN  \n",
+       "Word         to  protest  the  war   in   Iraq  and  \n",
+       "POS          TO       VB   DT   NN   IN    NNP   CC  \n",
+       "Tag           O        O    O    O    O  B-geo    O  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head().T"
+    "df.head(14).T"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "b52523ae",
+   "id": "1e7eeef3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "8fd15ea3",
+   "id": "1ed9586c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "4e912cc5",
+   "id": "c155f9e8",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "2b997bcf",
+   "id": "e6818357",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "73f1d12d",
+   "id": "26efd6bb",
    "metadata": {},
    "outputs": [
     {
@@ -249,8 +300,383 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 144,
+   "id": "4d16826b",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' Thousands of demonstrators have marched through London to protest the war in Iraq and demand the withdrawal of British troops from that country .'"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "se = NERSentence(df)\n",
+    "se.get_next_sentence()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "id": "11a51f43",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' They marched from the Houses of Parliament to a rally in Hyde Park .'"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "se.get_next_sentence()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "e1833f0e",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'LOC'"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "entity.tag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "bb6751c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hyde Park'"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "entity.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "047fa179",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sentence #</th>\n",
+       "      <th>Word</th>\n",
+       "      <th>POS</th>\n",
+       "      <th>Tag</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>54</th>\n",
+       "      <td>Sentence: 3</td>\n",
+       "      <td>They</td>\n",
+       "      <td>PRP</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>marched</td>\n",
+       "      <td>VBD</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>from</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>the</td>\n",
+       "      <td>DT</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Houses</td>\n",
+       "      <td>NNS</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>of</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Parliament</td>\n",
+       "      <td>NN</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>to</td>\n",
+       "      <td>TO</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>a</td>\n",
+       "      <td>DT</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>rally</td>\n",
+       "      <td>NN</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>in</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Hyde</td>\n",
+       "      <td>NNP</td>\n",
+       "      <td>B-geo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Park</td>\n",
+       "      <td>NNP</td>\n",
+       "      <td>I-geo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>.</td>\n",
+       "      <td>.</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>Sentence: 4</td>\n",
+       "      <td>Police</td>\n",
+       "      <td>NNS</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>put</td>\n",
+       "      <td>VBD</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Sentence #        Word  POS    Tag\n",
+       "54  Sentence: 3        They  PRP      O\n",
+       "55          NaN     marched  VBD      O\n",
+       "56          NaN        from   IN      O\n",
+       "57          NaN         the   DT      O\n",
+       "58          NaN      Houses  NNS      O\n",
+       "59          NaN          of   IN      O\n",
+       "60          NaN  Parliament   NN      O\n",
+       "61          NaN          to   TO      O\n",
+       "62          NaN           a   DT      O\n",
+       "63          NaN       rally   NN      O\n",
+       "64          NaN          in   IN      O\n",
+       "65          NaN        Hyde  NNP  B-geo\n",
+       "66          NaN        Park  NNP  I-geo\n",
+       "67          NaN           .    .      O\n",
+       "68  Sentence: 4      Police  NNS      O\n",
+       "69          NaN         put  VBD      O"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[54:70]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "id": "2a30e302",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sentence #</th>\n",
+       "      <th>Word</th>\n",
+       "      <th>POS</th>\n",
+       "      <th>Tag</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>that</td>\n",
+       "      <td>DT</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>country</td>\n",
+       "      <td>NN</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>.</td>\n",
+       "      <td>.</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Sentence: 2</td>\n",
+       "      <td>Families</td>\n",
+       "      <td>NNS</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>of</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>soldiers</td>\n",
+       "      <td>NNS</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>killed</td>\n",
+       "      <td>VBN</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Sentence #      Word  POS Tag\n",
+       "21          NaN      that   DT   O\n",
+       "22          NaN   country   NN   O\n",
+       "23          NaN         .    .   O\n",
+       "24  Sentence: 2  Families  NNS   O\n",
+       "25          NaN        of   IN   O\n",
+       "26          NaN  soldiers  NNS   O\n",
+       "27          NaN    killed  VBN   O"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c7ae37e7",
+   "id": "6025f76d",
    "metadata": {},
    "outputs": [],
    "source": []
