<code> Upload code for NER dataset

--- a/notebooks/HuggingfaceDatasetUpload.ipynb
+++ b/notebooks/HuggingfaceDatasetUpload.ipynb
@@ -2,21 +2,23 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 60,
       "metadata": {
         "id": "FxzGpm8krMmg"
       },
       "outputs": [],
       "source": [
         "import dotenv\n",
-        "from datasets import load_dataset,Dataset\n",
+        "from datasets import load_dataset,Dataset,ClassLabel\n",
         "from datasets.features import Features,Value\n",
-        "import os"
+        "import os\n",
+        "import pandas as pd\n",
+        "import numpy as np"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 2,
       "metadata": {
         "id": "kJ5mZ9VnslkT"
       },
@@ -26,6 +28,13 @@
         "data_path = os.getenv(\"NEWS_DATA_PATH\")\n",
         "columns = [\"idx\",\"article_idx\",\"date\",\"year\",\"month\",\"day\",\"author\",\"title\",\"article\",\"url\",\"section\",\"publication\"]\n",
         "features_dict = Features({i: Value(\"int16\")  if i in [\"idx\",\"article_idx\"] else Value(\"string\") for i in columns})"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# All News 2.7M Dataset"
       ]
     },
     {
@@ -245,11 +254,296 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Kaggle "
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "id2label = {\n",
+        "    0:'O',\n",
+        "    1:'B-PER', \n",
+        "    2:'I-PER',\n",
+        "    3:'B-ORG',\n",
+        "    4:'I-ORG',\n",
+        "    5:'B-GEO',\n",
+        "    6:'I-GEO',\n",
+        "    7:'B-GPE',\n",
+        "    8:'I-GPE',\n",
+        "    9:'B-TIM',\n",
+        "    10:'I-TIM',\n",
+        "    11:'B-ART',\n",
+        "    12:'I-ART',\n",
+        "    13:'B-EVE',\n",
+        "    14:'I-EVE',\n",
+        "    15:'B-NAT'\n",
+        "    ,16:'I-NAT'\n",
+        "}\n",
+        "\n",
+        "label2id = {i:k for k,i in id2label.items()}"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 58,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "labels_name = ['O','B-PER','I-PER','B-ORG','I-ORG','B-GEO','I-GEO','B-GPE','I-GPE','B-TIM','I-TIM','B-ART','I-ART','B-EVE','I-EVE','B-NAT','I-NAT']"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 47,
       "metadata": {
         "id": "cSv5XiiNuVLS"
       },
+      "outputs": [],
+      "source": [
+        "data_path = '../data/'\n",
+        "ner = pd.read_csv(data_path + 'ner_dataset.zip', encoding=\"latin1\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 48,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "ner[\"sentence_id\"] = ner[\"Sentence #\"].ffill().str.split(\":\").apply(lambda v: v[-1])\n",
+        "ner[\"tag\"] = ner.Tag.str.upper()\n",
+        "ner[\"ner_tags\"] = ner.tag.map(label2id)\n",
+        "ner = ner.rename({\"Word\":\"tokens\"},axis=1)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 74,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(1048575, 7)"
+            ]
+          },
+          "execution_count": 74,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "ner.shape"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 50,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "aggregator = lambda x: list(x)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 53,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "grouped_df = ner.groupby([\"sentence_id\"]).agg({\"tokens\":aggregator,\"ner_tags\":aggregator}).reset_index()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 54,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>sentence_id</th>\n",
+              "      <th>tokens</th>\n",
+              "      <th>ner_tags</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1</td>\n",
+              "      <td>[Thousands, of, demonstrators, have, marched, ...</td>\n",
+              "      <td>[0, 0, 0, 0, 0, 0, 5, 0, 0, 0, 0, 0, 5, 0, 0, ...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>10</td>\n",
+              "      <td>[Iranian, officials, say, they, expect, to, ge...</td>\n",
+              "      <td>[7, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>100</td>\n",
+              "      <td>[Helicopter, gunships, Saturday, pounded, mili...</td>\n",
+              "      <td>[0, 0, 9, 0, 0, 0, 0, 0, 5, 0, 0, 0, 0, 0, 3, ...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>1000</td>\n",
+              "      <td>[They, left, after, a, tense, hour-long, stand...</td>\n",
+              "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>10000</td>\n",
+              "      <td>[U.N., relief, coordinator, Jan, Egeland, said...</td>\n",
+              "      <td>[5, 0, 0, 1, 2, 0, 9, 0, 5, 0, 7, 0, 7, 0, 0, ...</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "  sentence_id                                             tokens  \\\n",
+              "0           1  [Thousands, of, demonstrators, have, marched, ...   \n",
+              "1          10  [Iranian, officials, say, they, expect, to, ge...   \n",
+              "2         100  [Helicopter, gunships, Saturday, pounded, mili...   \n",
+              "3        1000  [They, left, after, a, tense, hour-long, stand...   \n",
+              "4       10000  [U.N., relief, coordinator, Jan, Egeland, said...   \n",
+              "\n",
+              "                                            ner_tags  \n",
+              "0  [0, 0, 0, 0, 0, 0, 5, 0, 0, 0, 0, 0, 5, 0, 0, ...  \n",
+              "1  [7, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
+              "2  [0, 0, 9, 0, 0, 0, 0, 0, 5, 0, 0, 0, 0, 0, 3, ...  \n",
+              "3                  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]  \n",
+              "4  [5, 0, 0, 1, 2, 0, 9, 0, 5, 0, 7, 0, 7, 0, 0, ...  "
+            ]
+          },
+          "execution_count": 54,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "grouped_df.head(5)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 55,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "ner_dataset = Dataset.from_pandas(grouped_df)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 62,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "ner_dataset.features[\"ner_tags\"].feature = ClassLabel(num_classes=17, names=labels_name, id=None)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 69,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "ner_feature = ner_dataset.features[\"ner_tags\"]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 70,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Sequence(feature=ClassLabel(num_classes=17, names=['O', 'B-PER', 'I-PER', 'B-ORG', 'I-ORG', 'B-GEO', 'I-GEO', 'B-GPE', 'I-GPE', 'B-TIM', 'I-TIM', 'B-ART', 'I-ART', 'B-EVE', 'I-EVE', 'B-NAT', 'I-NAT'], id=None), length=-1, id=None)"
+            ]
+          },
+          "execution_count": 70,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "ner_feature"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 72,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "label_names = ner_feature.feature.names\n",
+        "#label_names"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 75,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "bcd553efcca34ef8957f58cf1721149c",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "Pushing dataset shards to the dataset hub:   0%|          | 0/4 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/home/rjac/anaconda3/envs/hf/lib/python3.10/site-packages/huggingface_hub/hf_api.py:1948: FutureWarning: `identical_ok` has no effect and is deprecated. It will be removed in 0.11.0.\n",
+            "  warnings.warn(\n"
+          ]
+        }
+      ],
+      "source": [
+        "ner_dataset.push_to_hub(\"rjac/kaggle-entity-annotated-corpus-ner-dataset\",max_shard_size=\"5MB\",private=False,token=os.getenv(\"AUTH_TOKEN\"))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
       "outputs": [],
       "source": []
     }
@@ -268,7 +562,15 @@
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
       "version": "3.10.4"
     },
     "vscode": {
