--- a/notebooks/TopicExtraction.ipynb
+++ b/notebooks/TopicExtraction.ipynb
@@ -1191,1023 +1191,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "([-1,\n",
-       "  4,\n",
-       "  1,\n",
-       "  6,\n",
-       "  36,\n",
-       "  3,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  6,\n",
-       "  -1,\n",
-       "  25,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  3,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  10,\n",
-       "  32,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  0,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  7,\n",
-       "  4,\n",
-       "  14,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  23,\n",
-       "  -1,\n",
-       "  15,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  8,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  0,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  20,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  8,\n",
-       "  -1,\n",
-       "  9,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  16,\n",
-       "  7,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  23,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  39,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  11,\n",
-       "  -1,\n",
-       "  0,\n",
-       "  -1,\n",
-       "  1,\n",
-       "  17,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  34,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  12,\n",
-       "  -1,\n",
-       "  12,\n",
-       "  5,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  24,\n",
-       "  -1,\n",
-       "  36,\n",
-       "  21,\n",
-       "  16,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  38,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  3,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  2,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  26,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  2,\n",
-       "  1,\n",
-       "  32,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  7,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  13,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  20,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  16,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  19,\n",
-       "  -1,\n",
-       "  7,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  35,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  39,\n",
-       "  -1,\n",
-       "  35,\n",
-       "  7,\n",
-       "  33,\n",
-       "  2,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  10,\n",
-       "  -1,\n",
-       "  10,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  16,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  13,\n",
-       "  -1,\n",
-       "  0,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  21,\n",
-       "  0,\n",
-       "  14,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  0,\n",
-       "  -1,\n",
-       "  36,\n",
-       "  1,\n",
-       "  7,\n",
-       "  -1,\n",
-       "  13,\n",
-       "  5,\n",
-       "  -1,\n",
-       "  12,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  25,\n",
-       "  16,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  18,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  5,\n",
-       "  2,\n",
-       "  -1,\n",
-       "  16,\n",
-       "  4,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  0,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  22,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  1,\n",
-       "  32,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  5,\n",
-       "  15,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  24,\n",
-       "  -1,\n",
-       "  2,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  1,\n",
-       "  34,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  15,\n",
-       "  3,\n",
-       "  4,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  3,\n",
-       "  35,\n",
-       "  -1,\n",
-       "  30,\n",
-       "  15,\n",
-       "  27,\n",
-       "  27,\n",
-       "  10,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  1,\n",
-       "  24,\n",
-       "  -1,\n",
-       "  23,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  7,\n",
-       "  -1,\n",
-       "  2,\n",
-       "  23,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  5,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  0,\n",
-       "  -1,\n",
-       "  39,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  3,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  4,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  4,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  10,\n",
-       "  26,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  3,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  14,\n",
-       "  -1,\n",
-       "  0,\n",
-       "  3,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  7,\n",
-       "  -1,\n",
-       "  29,\n",
-       "  34,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  27,\n",
-       "  15,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  6,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  22,\n",
-       "  -1,\n",
-       "  18,\n",
-       "  12,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  0,\n",
-       "  18,\n",
-       "  20,\n",
-       "  25,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  5,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  20,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  3,\n",
-       "  15,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  0,\n",
-       "  31,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  17,\n",
-       "  33,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  0,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  38,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  37,\n",
-       "  39,\n",
-       "  14,\n",
-       "  9,\n",
-       "  9,\n",
-       "  23,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  18,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  14,\n",
-       "  3,\n",
-       "  2,\n",
-       "  9,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  35,\n",
-       "  -1,\n",
-       "  29,\n",
-       "  39,\n",
-       "  0,\n",
-       "  13,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  11,\n",
-       "  -1,\n",
-       "  23,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  8,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  1,\n",
-       "  25,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  2,\n",
-       "  9,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  6,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  12,\n",
-       "  -1,\n",
-       "  10,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  34,\n",
-       "  -1,\n",
-       "  20,\n",
-       "  17,\n",
-       "  7,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  23,\n",
-       "  38,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  27,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  6,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  2,\n",
-       "  0,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  11,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  19,\n",
-       "  3,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  17,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  4,\n",
-       "  -1,\n",
-       "  37,\n",
-       "  29,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  34,\n",
-       "  17,\n",
-       "  4,\n",
-       "  1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  35,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  9,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  20,\n",
-       "  -1,\n",
-       "  4,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  33,\n",
-       "  4,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  0,\n",
-       "  -1,\n",
-       "  1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  8,\n",
-       "  0,\n",
-       "  -1,\n",
-       "  26,\n",
-       "  15,\n",
-       "  -1,\n",
-       "  3,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  34,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  32,\n",
-       "  36,\n",
-       "  3,\n",
-       "  12,\n",
-       "  27,\n",
-       "  -1,\n",
-       "  26,\n",
-       "  -1,\n",
-       "  18,\n",
-       "  26,\n",
-       "  18,\n",
-       "  1,\n",
-       "  -1,\n",
-       "  10,\n",
-       "  -1,\n",
-       "  30,\n",
-       "  13,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  24,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  8,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  16,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  39,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  25,\n",
-       "  -1,\n",
-       "  9,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  4,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  7,\n",
-       "  39,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  8,\n",
-       "  -1,\n",
-       "  28,\n",
-       "  17,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  2,\n",
-       "  4,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  0,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  1,\n",
-       "  5,\n",
-       "  0,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  6,\n",
-       "  -1,\n",
-       "  7,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  10,\n",
-       "  -1,\n",
-       "  32,\n",
-       "  -1,\n",
-       "  13,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  18,\n",
-       "  -1,\n",
-       "  11,\n",
-       "  9,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  32,\n",
-       "  0,\n",
-       "  -1,\n",
-       "  32,\n",
-       "  32,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  9,\n",
-       "  19,\n",
-       "  5,\n",
-       "  3,\n",
-       "  23,\n",
-       "  34,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  18,\n",
-       "  -1,\n",
-       "  38,\n",
-       "  -1,\n",
-       "  10,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  3,\n",
-       "  -1,\n",
-       "  7,\n",
-       "  -1,\n",
-       "  7,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  39,\n",
-       "  -1,\n",
-       "  17,\n",
-       "  -1,\n",
-       "  15,\n",
-       "  25,\n",
-       "  20,\n",
-       "  32,\n",
-       "  -1,\n",
-       "  12,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  24,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  6,\n",
-       "  -1,\n",
-       "  0,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  18,\n",
-       "  -1,\n",
-       "  5,\n",
-       "  17,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  35,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  2,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  3,\n",
-       "  -1,\n",
-       "  13,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  2,\n",
-       "  -1,\n",
-       "  9,\n",
-       "  -1,\n",
-       "  31,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  2,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  3,\n",
-       "  28,\n",
-       "  -1,\n",
-       "  17,\n",
-       "  22,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  10,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  35,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  25,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  22,\n",
-       "  -1,\n",
-       "  9,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  16,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  12,\n",
-       "  23,\n",
-       "  -1,\n",
-       "  5,\n",
-       "  5,\n",
-       "  -1,\n",
-       "  7,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  23,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  6,\n",
-       "  34,\n",
-       "  11,\n",
-       "  24,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  4,\n",
-       "  11,\n",
-       "  5,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  11,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  27,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  3,\n",
-       "  7,\n",
-       "  -1,\n",
-       "  24,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  37,\n",
-       "  25,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  0,\n",
-       "  -1,\n",
-       "  25,\n",
-       "  38,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  33,\n",
-       "  20,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  16,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  26,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  33,\n",
-       "  5,\n",
-       "  -1,\n",
-       "  8,\n",
-       "  25,\n",
-       "  29,\n",
-       "  -1,\n",
-       "  9,\n",
-       "  -1,\n",
-       "  19,\n",
-       "  28,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  0,\n",
-       "  -1,\n",
-       "  13,\n",
-       "  -1,\n",
-       "  17,\n",
-       "  -1,\n",
-       "  15,\n",
-       "  -1,\n",
-       "  5,\n",
-       "  4,\n",
-       "  1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  6,\n",
-       "  -1,\n",
-       "  18,\n",
-       "  25,\n",
-       "  -1,\n",
-       "  19,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  11,\n",
-       "  4,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  38,\n",
-       "  -1,\n",
-       "  33,\n",
-       "  14,\n",
-       "  -1,\n",
-       "  -1,\n",
-       "  ...],\n",
-       " None)"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "topic_model.reduce_topics(batch,topics,nr_topics=40)"
+    "reduce_topics ,probs = topic_model.reduce_topics(batch,topics,nr_topics=40)"
    ]
   },
   {
