<code> Upload code for NER dataset

--- a/notebooks/HuggingfaceDatasetUpload.ipynb
+++ b/notebooks/HuggingfaceDatasetUpload.ipynb
@@ -542,6 +542,26 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 79,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "execution_count": 79,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "grouped_df.apply(lambda x: len(x[\"tokens\"]) - len(x[\"ner_tags\"]),axis=1).sum()"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {},
       "outputs": [],
