<code> Clustering + Embedding

--- a/notebooks/TopicExtraction.ipynb
+++ b/notebooks/TopicExtraction.ipynb
@@ -21,6 +21,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predefined_features = [\n",
+    "    \"Technology\"\n",
+    "    ,\"Healthcare\"\n",
+    "    ,\"Industrials\"\n",
+    "    ,\"Consumer Goods\"\n",
+    "    ,\"Payments and Insurances\"\n",
+    "    ,\"Hedge Funds\"\n",
+    "    ,\"Private Equity\"\n",
+    "    ,\"Private Credit\"\n",
+    "    ,\"Investment Managers and Mutual Funds\"\n",
+    "    ,\"Investment Banks and Research\"\n",
+    "    ,\"Consulting Firms\"\n",
+    "    ,\"Advertising and Public Relations\"\n",
+    "    ,\"Law Expert Witness\"\n",
+    "    ,\"Law Firm Resources\"\n",
+    "]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
